add comparacion-remuneraciones service and controller